--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@ body {
     display: flex;
     flex-direction: column;
     color: #000000DE;
+    color:#000000FF;
 }
 
 /* Navbar Start */
@@ -65,7 +66,7 @@ section {
 }
 
 section .logo-area {
-    width: 1280px;
+    width: 100%;
     height: 240px;
     display: flex;
     align-items: flex-end;
@@ -79,6 +80,7 @@ section .google-logo {
 
 section .magnifier {
     width: 20px;
+    opacity:.5;
 }
 
 section .microphone {
@@ -86,7 +88,7 @@ section .microphone {
 }
 
 section .search-box {
-    width: 584px;
+    width: 480px;
     margin-top: 20px;
     position: relative;
 
@@ -101,6 +103,7 @@ section .search-box .search {
     border: 1px solid rgba(0, 0, 0, .87);
     outline: none;
     font-size: 16px;
+    box-shadow: 0px 0px 2px 0px #70757a;
 }
 
 section .search-box .icons {
@@ -123,7 +126,8 @@ section .buttons button{
     font-size: 14px;
     text-align: center;
     margin:11px 4px;
-    padding:0px 16px;
+    padding:4px 16px;
+    margin-top:18px;
     cursor:pointer;
     line-height: 27px;
 }
